Adding js and form to OAE Page
Added JS and FORM to OAE Page, tried to fix navigation

--- a/LifeOnTheIce.html
+++ b/LifeOnTheIce.html
@@ -22,12 +22,12 @@
     <body>
     <div id="wrapper" class="page-wrapper">
         <header>
-<div id ="logo"><img src="/img/antarctica_logo.png"</div>
+<div id ="logo"><img src="img/antarctica_logo.png"</div>
 <div id="navcontainer">
-<ul>
-<li><a href="MyStory.html">My Story</a></li>
-<li><a href="OAEInterviews.html">OAE Interviews</a></li>
-<li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
+    <ul>
+    <li><a href="MyStory.html">My Story</a></li>
+    <li><a href="OAEInterviews.html">OAE Interviews</a></li>
+    <li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
 </ul>
 </div>           
 <div class="burger"></div>
@@ -36,7 +36,7 @@
 </div>
 <div class="main_sub">
 <h1>Life on the Ice</h1>
-<p>Some of my favorite links that feature the true Antarctica (no tourists)</p>
+<p>Some of my favorite links that feature the true Antarctica</p>
 
 <ul>
 <li><a href="www.southpolestation.com">Bill Spindler's South Pole Station Page</a></li>
@@ -49,8 +49,8 @@
 
 </div>
 
-    <div id="footer">Copyright 2014 T.A.D'Souza</div>
-        </div>
+    <div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
+</div>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
