--- a/OAEInterviews.html
+++ b/OAEInterviews.html
@@ -22,12 +22,12 @@
     <body>
     <div id="wrapper" class="page-wrapper">
         <header>
-<div id ="logo"><img src="/img/antarctica_logo.png"</div>
+<div id ="logo"><img src="img/antarctica_logo.png"</div>
 <div id="navcontainer">
 <ul>
-<li><a href="#">My Story</a></li>
-<li><a href="#">OAE Interviews</a></li>
-<li><a href="#">Life on the Ice</a></li>
+    <li><a href="MyStory.html">My Story</a></li>
+    <li><a href="OAEInterviews.html">OAE Interviews</a></li>
+    <li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
 </ul>
 </div>           
 <div class="burger"></div>
@@ -35,17 +35,21 @@
 </div>
 </div>
 <div class="main_sub">
-<h1>Are you an Old Antarctic Explorer?</h1>
-<p>Were you a Seabee building the first station in the 1950s?</p>
-<p>Did you get a turkey at the McMurdo bowling lane? Did you pinstriped pinsetter socks?</p>
-<p>Do you remember what Palmer looked like with the white fuel tanks?</p>
+<h1>Are you an Old Antarctic Explorer?</h1> 
+<p>Are you a famous Antarctic legend?</p> <button id="show_hide_Hillary" type="button">Yes?</button>
+<div id="Hillary"><img src="img/HILLARY_Peter_Recjek_NSF.jpg"></div>
+<p>Did you get a turkey at the McMurdo bowling lane? Did you wear pinstriped pinsetter socks?</p> <button id="show_hide_Pinsetter">Yes?</button>
+<div id="pinsetter"><img src="img/Pinsetting_Steven Profaizer_NSF.jpg"></div>
+<p>Did you actually live the Santa's Warehouse in the Dome?</p> <button id="show_hide_Santa">Yes?</button>
+<div id="Santa"><img src="img/InsideDome_NSF_Thomas_Gustaffson.jpg"></div>
 <p>I would love to interview you. Antarctica is made up of so many stories as it enters its next century of exploration. Let me feature yours on this website.</p>
 
+<script type="text/javascript" src="https://secure.jotform.us/jsform/41618731870154"></script>
 
 
 </div>
 
-    <div id="footer">Copyright 2014 T.A.D'Souza</div>
+    <div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
         </div>
 
 
@@ -53,6 +57,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
