--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
 
 </div>
 
-<div id="rhs"><a class="twitter-timeline" width="200" height="500" href="https://twitter.com/antarcticist" data-widget-id="476161975009816576">Tweets by @antarcticist</a>
+<div id="rhs"><a class="twitter-timeline" width="200" height="400" href="https://twitter.com/antarcticist" data-widget-id="476161975009816576">Tweets by @antarcticist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div class="main">
@@ -50,7 +50,7 @@
 
 </div>
 
-<div id="footer">Copyright&#0169; 2014 T.A.D'Souza</div>
+<div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
         </div>
 
 
