Removed index.html
Changed index2 to index
Removed MyStory in nav

--- a/index.html
+++ b/index.html
@@ -13,48 +13,51 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href="/lib/jquery.bxslider.css" rel="stylesheet" />
+        <link rel="stylesheet" href="css/main2.css">
+        <link href="css/jquery.bxslider.css" rel="stylesheet" />
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="/js/jquery.bxslider.min.js"></script>
 
-    </head>
-    <body>
-    <div id="wrapper" class="page-wrapper">
+
+</head>
+<body>
+<div id="wrapper" class="page-wrapper">
         <header>
-
+<div id ="logo"><img src="img/antarctica_logo.png"</div>
 <div id="navcontainer">
-<ul id="navlist">
-<li id="active"><a href="#" id="current">My Story</a></li>
-<li><a href="#">OAE Interviews</a></li>
-<li><a href="#">Life on the Ice</a></li>
-</ul>
-</div>           
+    <ul>
+    <li><a href="OAEInterviews.html">OAE Interviews</a></li>
+    <li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
+    </ul>
+    </div>           
 <div class="burger"></div>
-        </header>
+
+</header>
+
+</div>
+
+<div id="rhs"><a class="twitter-timeline" width="200" height="400" href="https://twitter.com/antarcticist" data-widget-id="476161975009816576">Tweets by @antarcticist</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div class="main">
 <ul class="bxslider">
 
-  <li><img src="/images/pic1.jpg" /></li>
-  <li><img src="/images/pic2.jpg" /></li>
-  <li><img src="/images/pic3.jpg" /></li>
-  <li><img src="/images/pic4.jpg" /></li>
+  <li><img src="img/Antarctica1.jpg"/></li>
+  <li><img src="img/Antarctica2.jpg"/></li>
+  <li><img src="img/Antarctica3.jpg"/></li>
+  <li><img src="img/Antarctica4.jpg"/></li>
 </ul>
 
+</div>
+
+<div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
         </div>
 
-        <footer>
-            <div class="box"></div>
-            <div class="box middle"></div>
-            <div class="box"></div>
-        </footer>
 
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/jquery.bxslider.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
