Fixed Responsive Box
Inline styles for box slider; updated navigation

--- a/LifeOnTheIce.html
+++ b/LifeOnTheIce.html
@@ -22,17 +22,17 @@
     <body>
     <div id="wrapper" class="page-wrapper">
         <header>
-<div id ="logo"><img src="img/antarctica_logo.png"</div>
+<div id ="logo"><a href="index.html"><img src="img/antarctica_logo.png"></a></div>
+</div>
 <div id="navcontainer">
     <ul>
     <li><a href="OAEInterviews.html">OAE Interviews</a></li>
     <li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
-</ul>
-</div>           
+    </ul>
+    </div>           
 <div class="burger"></div>
-        </header>
-</div>
-</div>
+
+</header>
 <div class="main_sub">
 <h1>Life on the Ice</h1>
 <p>Some of my favorite links that feature the true Antarctica</p>
