--- a/OAEInterviews.html
+++ b/OAEInterviews.html
@@ -22,15 +22,17 @@
     <body>
     <div id="wrapper" class="page-wrapper">
         <header>
-<div id ="logo"><img src="img/antarctica_logo.png"</div>
+<div id ="logo"><a href="index.html"><img src="img/antarctica_logo.png"></a></div>
+</div>
 <div id="navcontainer">
-<ul>
+    <ul>
     <li><a href="OAEInterviews.html">OAE Interviews</a></li>
     <li><a href="LifeOnTheIce.html">Life on the Ice</a></li>
-</ul>
-</div>           
+    </ul>
+    </div>           
 <div class="burger"></div>
-        </header>
+
+</header>
 </div>
 </div>
 <div class="main_sub">
@@ -52,10 +54,10 @@
         </div>
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/OAE.js"></script>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
