Added new pictures
Added new pictures to fit design of responsive box, made navigation
responsive, updated nag

--- a/LifeOnTheIce.html
+++ b/LifeOnTheIce.html
@@ -44,8 +44,7 @@
 
 </ul>
 
-
-
+<script type="text/javascript" src="https://secure.jotform.us/jsform/41618731870154"></script>
 </div>
 
     <div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
