--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
 </div>
 
-<div id="rhs"><a class="twitter-timeline" width="200" height="400" href="https://twitter.com/antarcticist" data-widget-id="476161975009816576">Tweets by @antarcticist</a>
+<div id="rhs"><a class="twitter-timeline" width="200" height="500" href="https://twitter.com/antarcticist" data-widget-id="476161975009816576">Tweets by @antarcticist</a>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-<div style="width: 70%" "margin-left: 5%"><ul class="bxslider">
+<div style="width: 80%"><ul class="bxslider">
 
-  <li><img src="img/Antarctica1.jpg"/></li>
-  <li><img src="img/Antarctica2.jpg"/></li>
-  <li><img src="img/Antarctica3.jpg"/></li>
-  <li><img src="img/Antarctica4.jpg"/></li>
+  <li><img src="img/Antarctica1Copy.jpg"/></li>
+  <li><img src="img/Antarctica2Copy.jpg"/></li>
+  <li><img src="img/Antarctica3Copy.jpg"/></li>
+  <li><img src="img/Antarctica4Copy.jpg"/></li>
 </ul>
 </div>
 <div id="footer">Copyright&#0169; 2014 T.D'Souza</div>
