--- a/OAEInterviews.html
+++ b/OAEInterviews.html
@@ -39,11 +39,11 @@
 <h1>Are you an Old Antarctic Explorer?</h1> 
 <p>Are you a famous Antarctic legend?</p> <button id="show_hide_Hillary" type="button">Yes?</button>
 <div id="Hillary"><img src="img/HILLARY_Peter_Recjek_NSF.jpg"></div>
-<p>Did you get a turkey at the McMurdo bowling lane? Did you wear pinstriped pinsetter socks?</p> <button id="show_hide_Pinsetter">Yes?</button>
+<p>Did you set pins for one of the oldest manual bowling alleys in the world?</p> <button id="show_hide_Pinsetter">Yes?</button>
 <div id="pinsetter"><img src="img/Pinsetting_Steven Profaizer_NSF.jpg"></div>
-<p>Did you actually live the Santa's Warehouse in the Dome?</p> <button id="show_hide_Santa">Yes?</button>
+<p>Did you actually live in the Santa's Warehouse in the Dome?</p> <button id="show_hide_Santa">Yes?</button>
 <div id="Santa"><img src="img/InsideDome_NSF_Thomas_Gustaffson.jpg"></div>
-<p>I would love to interview you. Antarctica is made up of so many stories as it enters its next century of exploration. Let me feature yours on this website.</p>
+<p>If you have worked a season or more in on one of the polar stations, I would love to interview you. Antarctica is made up of so many stories as it enters its next century of exploration. Let me feature yours on this website.</p>
 
 <script type="text/javascript" src="https://secure.jotform.us/jsform/41618731870154"></script>
 
